fix container and row alignment

--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,6 @@ body, html {
   margin: 0;
 }
 
-.container {
-  margin-top: 200px;
-}
-
 .container-page {
   display: flex;
   flex-direction: column;
